feat: added POST /griefDerailer endpoint
